@@ -20,6 +20,7 @@ Default Qt Client
 - macOS updated to Qt 6.10.0 beta1
 Android Client
 - Added Online Users Activity to display users logged on to the server
+- Online users activity now has popup menu contaning all user actions
 - Added a new option to prevent talking users from moving to the top of users list
 - Added the ability to set status messages
 - Added the ability to control user's transmissions
